--- a/app.json
+++ b/app.json
@@ -8,10 +8,11 @@
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
-      "image": "./assets/splash-icon.png",
+      "image": "./assets/heroimg.jpg",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
+
     "ios": {
       "supportsTablet": true
     },
@@ -21,8 +22,14 @@
         "backgroundColor": "#ffffff"
       }
     },
+
+    "softwareKeyboardLayoutMode": "pan",
+
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": ["expo-font"],
+
+    "assetBundlePatterns": ["assets/fonts/*"]
   }
 }
