--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~52.0.18",
-    "expo-status-bar": "~2.0.0",
-    "react": "18.3.1",
-    "react-native": "0.76.5"
+    "expo": "^52.0.18",
+    "expo-font": "^13.0.1",
+    "expo-splash-screen": "^0.29.18",
+    "expo-status-bar": "^2.0.0",
+    "react": "^18.3.1",
+    "react-native": "^0.76.5",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "^18.3.12",
+    "typescript": "~5.3.3"
   },
   "private": true
 }
